// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`update() compile: query-ws 1`] = `"UPDATE ONLY $bind__4 CONTENT $bind__5 WHERE age = $bind__6 RETURN DIFF TIMEOUT TIMEOUT 1s"`;

exports[`update() compile: bindings-ws 1`] = `
{
  "bind__4": RecordId {
    "id": 1,
    [Symbol(surrealdb.RecordId)]: true,
    [Symbol(surrealdb.Value)]: true,
    "table": Table {
      "name": "person",
      [Symbol(surrealdb.Table)]: true,
      [Symbol(surrealdb.Value)]: true,
    },
  },
  "bind__5": {
    "firstname": "John",
    "lastname": "Doe",
  },
  "bind__6": 30,
}
`;

exports[`update() compile: query-http 1`] = `"UPDATE ONLY $bind__3 CONTENT $bind__4 WHERE age = $bind__5 RETURN DIFF TIMEOUT TIMEOUT 1s"`;

exports[`update() compile: bindings-http 1`] = `
{
  "bind__3": RecordId {
    "id": 1,
    [Symbol(surrealdb.RecordId)]: true,
    [Symbol(surrealdb.Value)]: true,
    "table": Table {
      "name": "person",
      [Symbol(surrealdb.Table)]: true,
      [Symbol(surrealdb.Value)]: true,
    },
  },
  "bind__4": {
    "firstname": "John",
    "lastname": "Doe",
  },
  "bind__5": 30,
}
`;
